--- a/src/component/intro/intro.scss
+++ b/src/component/intro/intro.scss
@@ -51,7 +51,7 @@
 
                 span{
                     font-size: inherit;
-                    color:red;
+                    color:#507d65;
                     font-size: 30px;
                 }
 
